<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_motion</name>
  <version>0.0.0</version>
  <description>The open_manipulator_motion package</description>

  <maintainer email="zang09@naver.com">Hae-Bum Jung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>open_manipulator_msgs</depend>  
  <depend>robotis_manipulator</depend>
  <depend>open_manipulator_6dof_libs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
